# flashcard-app

./: .gitignore  Cargo.toml  README.md  add_card.html  build.sh  index.html  main.css  package-lock.json  shell.nix
.github/workflows/: qa.yaml  release.yaml
docs/: learning_languages.md
src/: app.rs  cli.rs  db.rs  errors.rs  flashcard.rs  lib.rs  main.rs  migrate.rs  migrations.rs  model.rs  settings.rs  web.rs
src/components/: add_card.rs  edit_card.rs  error_notification.rs  flashcard.rs  flashcard_deck.rs  list_cards.rs  markdown.rs  mod.rs  review_by_tag.rs  review_cards.rs  richtext.rs  show_error.rs  view_card.rs
src/languages/: ai.rs  cli.rs  db.rs  mod.rs  model.rs
src/languages/components/: gen_new_sentence.rs  mod.rs  overview.rs  vocabulary.rs  write_story.rs
style/: tailwind.css
